--- a/.github/workflows/N1-OpenWrt-Lede.yml
+++ b/.github/workflows/N1-OpenWrt-Lede.yml
@@ -20,7 +20,6 @@ env:
   CONFIG_FILE: .config
   SCRIPT_SH: script.sh
   CONFIG_SH: config.sh
-  SRC_SH: src.sh
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
   
@@ -67,15 +66,13 @@ jobs:
         [ -e files ] && mv files openwrt/files
                       
     - name: Update feeds
-      run: |
-        chmod +x $SRC_SH
-        ./$SRC_SH
-        cd openwrt && ./scripts/feeds update -a
-        chmod +x $SCRIPT_SH
-        ./$SCRIPT_SH
+      run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
-      run: cd openwrt && ./scripts/feeds install -a
+      run: |
+        chmod +x $SCRIPT_SH
+        ./$SCRIPT_SH
+        cd openwrt && ./scripts/feeds install -a
 
     - name: Load custom configuration
       run: |
