--- a/.github/workflows/openwrtN1.yml
+++ b/.github/workflows/openwrtN1.yml
@@ -127,7 +127,7 @@ jobs:
             安装到EMMC及在线更新：系统-->晶晨宝盒
             
     - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.1.0
+      uses: dev-drprasad/delete-older-releases@v0.2
       with:
         keep_latest: 10
         delete_tags: true
@@ -135,10 +135,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.RELEASES_TOKEN }}
         
     - name: Delete older workflow runs and artifacts
-      uses: Mattraks/delete-workflow-runs@main
+      uses: Mattraks/delete-workflow-runs@v2
       if: env.DELETE_ARTIFACTS == 'true'
       with:
           token: ${{ secrets.RELEASES_TOKEN }}
           repository: ${{ github.repository }}
-          retain_days: ${{ env.KEEP_DAY }}
-          keep_minimum_runs: ${{ env.KEEP_MININUM_RUNS }}
+          retain_days: 30
+          keep_minimum_runs: 6
