--- a/.github/workflows/openwrtN1.yml
+++ b/.github/workflows/openwrtN1.yml
@@ -106,9 +106,10 @@ jobs:
       env:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
         PACKAGE_SOC: s905d
-        KERNEL_VERSION_NAME: 5.15.48_6.1.6
+        KERNEL_VERSION_NAME: 5.15.121_6.1.40
         KERNEL_AUTO_LATEST: true
         WHOAMI: CHH
+        GH_TOKEN: ${{ secrets.RELEASES_TOKEN }}
 
     - name: Create release
       uses: ncipollo/release-action@v1
