--- a/.github/workflows/openwrtN1.yml
+++ b/.github/workflows/openwrtN1.yml
@@ -17,7 +17,6 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
   SCRIPT_SH: script.sh
   CONFIG_SH: config.sh
   UPLOAD_FIRMWARE: true
@@ -99,7 +98,8 @@ jobs:
         du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
         du -h --max-depth=1 ./build_dir
         du -h --max-depth=1 ./bin
-        echo "::set-output name=status::success"
+        rm -rf ./build_dir
+        echo "status=success" >> $GITHUB_OUTPUT
 
     - name: Package Armvirt as OpenWrt
       uses: ophub/flippy-openwrt-actions@main
@@ -110,6 +110,24 @@ jobs:
         KERNEL_AUTO_LATEST: true
         WHOAMI: CHH
         GH_TOKEN: ${{ secrets.RELEASES_TOKEN }}
+        
+    - name: Organize files
+      id: organize
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      run: |
+        cd openwrt/bin/targets/*/*
+        rm -rf packages openwrt-armvirt-64-default.manifest openwrt-armvirt-64-Image sha256sums version.buildinfo feeds.buildinfo openwrt-armvirt-64-generic-kernel.bin openwrt-armvirt-64-generic.manifest
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        echo "status=success" >> $GITHUB_OUTPUT
+
+    - name: Upload firmware directory
+      uses: actions/upload-artifact@v3
+      if: steps.organize.outputs.status == 'success' && !cancelled()
+      with:
+        name: OpenWrt_firmware
+        path: |
+            ${{ env.FIRMWARE }}
+            ${{ env.PACKAGED_OUTPUTPATH }}        
 
     - name: Create release
       uses: ncipollo/release-action@v1
@@ -117,7 +135,7 @@ jobs:
         tag: OpenWrt_s905d_${{ env.PACKAGED_OUTPUTDATE }}
         name: N1-OpenWrt | ${{ env.DATE }}
         allowUpdates: true
-        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        artifacts: "${{ env.FIRMWARE }}/*.*,${{ env.PACKAGED_OUTPUTPATH }}/*.*"
         token: ${{ secrets.RELEASES_TOKEN }}
         body: |
           N1 OpenWrt Argon
@@ -130,16 +148,7 @@ jobs:
     - name: Remove old Releases
       uses: dev-drprasad/delete-older-releases@v0.2.1
       with:
-        keep_latest: 10
+        keep_latest: 5
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.RELEASES_TOKEN }}
-        
-    - name: Delete older workflow runs and artifacts
-      uses: Mattraks/delete-workflow-runs@v2
-      if: env.DELETE_ARTIFACTS == 'true'
-      with:
-          token: ${{ secrets.RELEASES_TOKEN }}
-          repository: ${{ github.repository }}
-          retain_days: 30
-          keep_minimum_runs: 6
