--- a/.github/workflows/TR3000_Immortalwrt.yml
+++ b/.github/workflows/TR3000_Immortalwrt.yml
@@ -1,23 +1,13 @@
-name: openwrtN1
-
+name: TR3000_Immortalwrt 
 
 on:
-  repository_dispatch:
   workflow_dispatch:
-    inputs:
-      ssh:
-        description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
-        
-  schedule:
-    - cron: 0 0 * * 5
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  REPO_BRANCH: openwrt-23.05
   FEEDS_CONF: feeds.conf.default
-  SCRIPT_SH: script.sh
+  CONFIG_FILE: .config
   CONFIG_SH: config.sh
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
@@ -41,7 +31,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         docker rmi `docker images -q`
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /etc/mysql /etc/php
+        sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android /opt/ghc
         sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
         sudo -E apt update -y
         sudo -E apt full-upgrade -y
@@ -53,25 +43,30 @@ jobs:
 
     - name: Clone source code
       run: |
-        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        git clone -b $REPO_BRANCH --single-branch $REPO_URL openwrt
         cd openwrt
         useVersionInfo=$(git show -s --date=short --format="date: %cd<br/>commit: %s<br/>commit hash: %H")
         echo "useVersionInfo=$useVersionInfo" >> $GITHUB_ENV
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "tag_name=$(date +%Y%m%d)" >> $GITHUB_ENV
-
-    #- name: Load custom feeds
-     # run: |
-    #    [ -e files ] && mv files openwrt/files
-                      
-    - name: Update feeds
-      run: cd openwrt && ./scripts/feeds update -a
-
-    - name: Install feeds
+        
+    - name: Load custom feeds
       run: |
-        chmod +x $SCRIPT_SH
-        ./$SCRIPT_SH
-        cd openwrt && ./scripts/feeds install -a
+        cd openwrt
+        git clone https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon
+        git clone https://github.com/morytyann/OpenWrt-mihomo.git package/luci-app-mihomo
+        git clone https://github.com/xiaorouji/openwrt-passwall.git package/luci-app-passwall
+        git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
+        cp -rf package/passwall-packages/* package/luci-app-passwall
+        rm -rf package/passwall-packages
+        
+    - name: Update & Install feeds
+      run: |
+       cd openwrt
+       ./scripts/feeds update -a
+       rm -rf feeds/packages/lang/golang
+       git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
+       ./scripts/feeds install -a
 
     - name: Load custom configuration
       run: |
@@ -98,25 +93,24 @@ jobs:
         du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
         du -h --max-depth=1 ./build_dir
         du -h --max-depth=1 ./bin
-        rm -rf ./build_dir
-        echo "status=success" >> $GITHUB_OUTPUT
+        echo "::set-output name=status::success"      
 
-    - name: Package Armvirt as OpenWrt
-      uses: ophub/flippy-openwrt-actions@main
-      env:
-        OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
-        PACKAGE_SOC: s905d
-        KERNEL_VERSION_NAME: 5.15.121_6.1.40
-        KERNEL_AUTO_LATEST: true
-        WHOAMI: CHH
-        GH_TOKEN: ${{ secrets.RELEASES_TOKEN }}
-        
+  #  - name: Package Armvirt as OpenWrt
+  #    uses: ophub/flippy-openwrt-actions@main
+  #    env:
+  #      OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*.tar.gz
+  #      PACKAGE_SOC: s905d
+  #      KERNEL_VERSION_NAME: 5.15.149_6.1.79
+ #       KERNEL_AUTO_LATEST: true
+  #      WHOAMI: CHH
+  #      GH_TOKEN: ${{ secrets.RELEASES_TOKEN }}
+
     - name: Organize files
       id: organize
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
-        rm -rf packages openwrt-armvirt-64-default.manifest openwrt-armvirt-64-Image sha256sums version.buildinfo feeds.buildinfo openwrt-armvirt-64-generic-kernel.bin openwrt-armvirt-64-generic.manifest
+        rm -rf packages mt798*.bin *.manifest *.buildinfo *kernel.bin version.buildinfo profiles.json
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
 
@@ -127,26 +121,25 @@ jobs:
         name: OpenWrt_firmware
         path: |
             ${{ env.FIRMWARE }}
-            ${{ env.PACKAGED_OUTPUTPATH }}        
-
+            ${{ env.PACKAGED_OUTPUTPATH }} 
+            
     - name: Create release
       uses: ncipollo/release-action@v1
       with:
-        tag: OpenWrt_s905d_${{ env.PACKAGED_OUTPUTDATE }}
-        name: N1-OpenWrt | ${{ env.DATE }}
+        tag: ${{ env.tag_name }}
+        name: cudy_tr3000_Immortalwrt_${{ env.REPO_BRANCH }} | ${{ env.DATE }}
         allowUpdates: true
         artifacts: "${{ env.FIRMWARE }}/*.*,${{ env.PACKAGED_OUTPUTPATH }}/*.*"
         token: ${{ secrets.RELEASES_TOKEN }}
         body: |
-          N1 OpenWrt Argon
+          Cudy tr3000 v1
                                     
-            * IP：10.0.0.1
+            * 默认IP：192.168.1.1
             默认用户名：root
-            默认密码：password
-            安装到EMMC及在线更新：系统-->晶晨宝盒
+            默认密码：
             
     - name: Remove old Releases
-      uses: dev-drprasad/delete-older-releases@v0.2.1
+      uses: dev-drprasad/delete-older-releases@v0.3.2
       with:
         keep_latest: 5
         delete_tags: true
