--- a/.github/workflows/TR3000_Immortalwrt.yml
+++ b/.github/workflows/TR3000_Immortalwrt.yml
@@ -67,6 +67,7 @@ jobs:
        rm -rf feeds/packages/lang/golang
        git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
        ./scripts/feeds install -a
+       sed -i 's/luci-theme-bootstrap/luci-theme-argon/' feeds/luci/collections/luci/Makefile
 
     - name: Load custom configuration
       run: |
