--- a/.github/workflows/TR3000_Openwrt.yml
+++ b/.github/workflows/TR3000_Openwrt.yml
@@ -8,7 +8,7 @@ env:
   REPO_BRANCH: 23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
-  CONFIG_SH: mihomo
+  CONFIG_SH: passwall
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
   
@@ -54,11 +54,11 @@ jobs:
       run: |
         cd openwrt
         git clone https://github.com/jerrykuku/luci-theme-argon.git package/luci-theme-argon
-        git clone https://github.com/morytyann/OpenWrt-mihomo.git package/luci-app-mihomo
-#        git clone https://github.com/xiaorouji/openwrt-passwall.git package/luci-app-passwall
-#        git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
-#        cp -rf package/passwall-packages/* package/luci-app-passwall
-#        rm -rf package/passwall-packages
+        git clone https://github.com/xiaorouji/openwrt-passwall.git package/luci-app-passwall
+        git clone https://github.com/xiaorouji/openwrt-passwall-packages.git package/passwall-packages
+        cp -rf package/passwall-packages/* package/luci-app-passwall
+        rm -rf package/passwall-packages
+#       git clone https://github.com/morytyann/OpenWrt-mihomo.git package/luci-app-mihomo
         
     - name: Update & Install feeds
       run: |
